# PyAPT

./: .gitignore  pyproject.toml
