[tool.poetry]
name = "PyAPT"
version = "1.0.1"
description = "Controlling Thorlabs APT using Python code using APT.dll and APT.lib, bypassing the activex controls."
authors = ["Dane HALO L010 <dane@halo-industries.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
